--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ main .hidden {
   display: none;
 }
 .modal {
+  border-radius: 10px solid white;
   background: white;
   font-size: 2rem;
   display: flex;
@@ -62,8 +63,8 @@ main .hidden {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  z-index: 10;
+  box-shadow: 0 4px 8px 0 rgba(100, 100, 100, 0.2),
+    0 6px 20px 0 rgba(100, 100, 100, 0.19);
 }
 
 .modal-header {
